# arculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: dependencies.cmake
docs/: Building-macOS-Linux.md
podules/: CMakeLists.txt
podules/aka10/src/: CMakeLists.txt
podules/morley_uap/src/: CMakeLists.txt
src/: CMakeLists.txt  hostfs.c  wx-app.cc  wx-app.h  wx-main.cc  wx-sdl2.c
